--- a/file.yml
+++ b/file.yml
@@ -3,3 +3,8 @@
   tasks:
   - name: Create a file
     file: path=/home/batch-26.txt state=touch
+- hosts: webservers
+  become: false
+  tasks:
+  - name: Create a file
+    file: path=/home/batch-26.txt state=touch
