--- a/file.yml
+++ b/file.yml
@@ -4,7 +4,7 @@
   - name: Create a file
     file: path=/home/batch-26.txt state=touch
 - hosts: webservers
-  become: false
+  become: true/false
   tasks:
   - name: Create a file
     file: path=/home/batch-26.txt state=touch
